<resources>
    <!-- APP名字  -->
    <string name="app_name">LIVE CAR</string>

    <!-- PLEASE KEEP THIS App ID IN SAFE PLACE -->
    <!-- Get your own App ID at https://dashboard.agora.io/ -->
    <!-- After you entered the App ID, remove <##> outside of Your App ID -->
    <!-- For formal released project, please use Security Keys
        https://docs.agora.io/en/Video/token?platform=All%20Platforms -->
    <!-- Tutorial Step 1 -->
    <string name="agora_app_id">e9cbe168d89941938a333e51f6aa327c</string>
    <string name="TRTCCloud_app_id">1400344863</string>
    <string name="TRTCCloud_app_key">d34db8ba4bdcb1f192f2bb921450bed54964e49335752f64c7db0d7e9d4eb10f</string>
    <string name="service_package_name">"io.agora.tutorials.service.CalledService"</string>
    <string name="str_common_type">通用模型</string>
    <string name="str_frame_src">数据来源</string>
    <string name="str_is_pre_process">是否预处理</string>

    <string name="str_common_model">通用模型</string>
    <string name="str_private_model">私有模型</string>
    <string name="str_camera">Camera</string>
    <string name="str_host">Host</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="cpu_count">VPU数目</string>
    <string name="str_cache_memory">缓存内存</string>
    <string name="str_scratch_memory">模型内存</string>
    <string name="str_input_data_format">InputFormat</string>
    <string name="str_output_data_format">OutputFormat</string>
    <string name="参数配置成功">str_config_pre_process_success</string>
    <string-array name="intput_data_format">
        <item>YV12_YVYU</item>
        <item>YUV422P</item>
        <item>RGB888</item>
        <item>BGR888</item>
    </string-array>

    <string name="device_connected">设备已连接</string>
    <string name="device_disconnect">设备未连接</string>
    <string name="open_wifi_peremission">请开启WIFI权限</string>
    <string name="start_rtsp_server">正在开启RTSP服务</string>

    <!--    设备信息-->
    <string name="software_version_number">软件版本号:</string>
    <string name="hardware_version">硬件版本号:</string>
    <string name="firmware_project_name">固件项目名称:</string>
    <string name="code_version">编码版本号:</string>
    <string name="product_id">产品ID:</string>
    <string name="manufacturer_id">厂商ID:</string>
    <string name="bsn">主板序列号/BSN:</string>
    <string name="psn">整机序列号/PSN:</string>
    <string name="bomid">BOMID:</string>
    <string name="isp">ISP版本号:</string>
    <string name="daughter_board">子板固件:</string>
    <string name="resolution_ratio_weight">显示器的分辨率宽度:</string>
    <string name="resolution_ratio_height">显示器的分辨率高度:</string>
    <string name="glxss_id">GLXSS ID:</string>
    <string name="software_version">Software Version:</string>


    <string name="user_information">个人信息</string>
    <string name="user_form_list">客户预约表单</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="login_np">账号密码登录</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="dnd_mode">免打扰模式</string>
    <string name="switch_on">开</string>
    <string name="switch_off">关</string>
    <string name="user_info_head">头像</string>
    <string name="user_info_name">昵称</string>
    <string name="user_info_mobile">手机号</string>
    <string name="mobile_empty">手机号不能为空!!!</string>
    <string name="psd_empty">密码不能为空!!!</string>
    <string name="mp_error">账号密码错误</string>
    <string name="dnd_mode_open">勿扰模式</string>
    <string name="wait_called">等待呼叫&#046;&#046;&#046;</string>
    <string name="dialog_title">确定退出当前账号吗?</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_no">取消</string>
    <string name="form_title">客户信息填写</string>
    <string name="form_client_screen_name">客户网名:</string>
    <string name="form_client_mobile">客户电话:</string>
    <string name="form_client_sex">客户性别:</string>
    <string name="form_car_type">车型:</string>
    <string name="form_client_level">客户级别:</string>
    <string name="form_test_drive">是否愿意试驾:</string>
    <string name="form_cause">原&#160;&#160;&#160;&#160;&#160;&#160;因:</string>
    <string name="form_commit">提交</string>
    <string name="call_invite">邀请你视频通话</string>
    <string name="call_hang_up">拒绝</string>
    <string name="call_answer">接听</string>
    <string name="form_man">男</string>
    <string name="form_woman">女</string>
    <string name="form_yes">是</string>
    <string name="form_no">否</string>
    <string name="list_form_title">客户信息</string>
    <string name="list_form_name">姓名</string>
    <string name="list_form_car_type">车型</string>
    <string name="list_form_drive">是/否愿意试驾</string>
    <string name="main_net">服务器连接异常&#046;&#046;&#046;</string>


    <!--**********************************XListView**********************************************-->
    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>

    <string name="header_hint_refresh_normal">下拉更新</string>
    <string name="header_hint_refresh_ready">松开可以刷新</string>
    <string name="header_hint_refresh_loading">正在刷新&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>

    <!-- ***********************阿里巴巴矢量图标库代码*************************************** -->
    <string name="hang_up">&#xe60e;</string>//挂断
    <string name="answer">&#xe605;</string>//接听
    <string name="client_head">&#xe60d;</string>//客户头像
</resources>
