<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="io.agora.tutorials.activity.FormActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <!--标题栏样式一-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:subtitleTextColor="@android:color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/form_title"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_client_screen_name"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_client_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="网名"
            android:textSize="17dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_client_mobile"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_client_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18851332606"
            android:textSize="17dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_client_sex"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_client_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_car_type"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_car_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_client_level"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_client_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_test_drive"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_test_drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_cause"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/form_cause"
            android:background="@drawable/edit_background"
            android:gravity="top"
            android:minLines="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888" />

    <Button
        android:id="@+id/form_commit"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/form_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
