<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background"

    android:orientation="vertical"
    tools:context="io.agora.tutorials.activity.FormListActivity">

    <View
        android:id="@+id/form_status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />
    <!--标题栏样式一-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:theme="@style/ToolBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/list_form_title"
            android:textColor="@color/form_title"
            android:textSize="@dimen/form_title"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23.5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/list_form_name"
            android:textColor="@color/list_text_color"
            android:textSize="@dimen/called_invite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="81dp"
            android:text="@string/list_form_car_type"
            android:textColor="@color/list_text_color"
            android:textSize="@dimen/called_invite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115.5dp"
            android:text="@string/list_form_drive"
            android:textColor="@color/list_text_color"
            android:textSize="@dimen/called_invite" />

    </LinearLayout>

    <io.agora.tutorials.widget.XListView
        android:id="@+id/list_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp" />

</LinearLayout>
