<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form_cause"
    android:paddingBottom="19dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/form_back" />

        <View
            android:id="@+id/form_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white" />
        <!--标题栏样式一-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@+id/form_status_bar"
            android:background="@color/white"
            app:theme="@style/ToolBarTheme">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/list_form_title"
                android:textColor="@color/form_title"
                android:textSize="@dimen/form_title"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="147dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/form_texts_select"
            android:orientation="vertical"
            android:paddingBottom="14.5dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:text="@string/form_client_screen_name"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="31dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />

            </LinearLayout>

            <View
                android:layout_width="225dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="12dp"
                android:background="@color/form_view" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_client_mobile"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />
            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="21.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/form_view" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_client_sex"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="21.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/form_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_car_type"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="21.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/form_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_client_level"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="21.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/form_view" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_test_drive"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_drive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="21.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/form_view" />

            <LinearLayout
                android:id="@+id/layout_cause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_cause"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/form_texts" />

                <TextView
                    android:id="@+id/form_info_cause"
                    android:layout_width="225dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_background"
                    android:minLines="5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/form_texts" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
